[package]
name = "bevy_keith"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# Bevy 0.7
bevy = { version = "0.7", default-features = false, features = ["render"] }
bytemuck = { version = "1.7", features = ["derive"] }
bitflags = "1.2"
copyless = "0.1.5"

[dev-dependencies]
bevy-inspector-egui = "0.11"

[[example]]
name = "quad"
required-features = [ "bevy/bevy_winit" ]
