[package]
name = "bevy_piet"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# Bevy 0.7
bevy = { version = "0.7", default-features = false, features = ["dynamic", "render"] }
bytemuck = { version = "1.7", features = ["derive"] }
bitflags = "1.2"

# Piet 0.5
kurbo = "0.8"
piet = "0.5"
