[package]
name = "bevy_piet"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
bevy = { version = "0.8", default-features = false, features = ["render", "bevy_asset"] }
bytemuck = { version = "1.7", features = ["derive"] }
bitflags = "1.2"
copyless = "0.1.5"

# Piet 0.5
kurbo = "0.8"
piet = "0.5"

[dev-dependencies]
bevy-inspector-egui = "0.12"

[[example]]
name = "quad"
required-features = [ "bevy/bevy_winit" ]
