[package]
name = "bevy_rome"
version = "0.1.0"
authors = ["Jerome Humbert <djeedai@gmail.com>"]
edition = "2021"
resolver = "2"
description = "Message passing and diff library for the Bevy game engine"
repository = "https://github.com/djeedai/bevy_rome"
homepage = "https://github.com/djeedai/bevy_rome/tree/main/bevy_rome"
documentation = "https://docs.rs/bevy_rome"
keywords = ["bevy", "messaging", "diff", "reflection"]
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = ["examples/*.gif", ".github", "release.md"]

[dependencies]
bevy = { version = "0.13", default-features = false, features = ["file_watcher", "multi-threaded"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
